tests/ui/uninhabited/void-branch.stderr
error: unreachable expression
  --> $DIR/void-branch.rs:8:9
   |
LL | /         unsafe {
LL | |
LL | |             std::mem::uninitialized::<Void>();
   | |             --------------------------------- any code following this expression is unreachable
LL | |         }
   | |_________^ unreachable expression
   |
note: this expression has type `Void`, which is uninhabited
  --> $DIR/void-branch.rs:10:13
   |
LL |             std::mem::uninitialized::<Void>();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: the lint level is defined here
  --> $DIR/void-branch.rs:1:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable expression
  --> $DIR/void-branch.rs:22:14
   |
LL |       if false {
   |  ______________^
LL | |
LL | |         infallible();
   | |         ------------ any code following this expression is unreachable
LL | |     }
   | |_____^ unreachable expression
   |
note: this expression has type `Infallible`, which is uninhabited
  --> $DIR/void-branch.rs:24:9
   |
LL |         infallible();
   |         ^^^^^^^^^^^^

error: aborting due to 2 previous errors

